
- :meth:`nrow`, :meth:`ncol` for :class:`RArray` 
  are now property-style getters

- static method :meth:`from_csvfile` and 
  instance method :meth:`to_csvfile` for :class:`RDataFrame`

- module :mod:`lib` to store modules representing R packages

- module :mod:`lib.grdevices` for R's grDevices

- module :mod:`lib.ggplot2` for the CRAN package ggplot2.


:mod:`rpy2.rinterface`:

- :data:`globalEnv`, :data:`baseNameSpaceEnv`, and :data:`emptyEnv` 
  were renamed to :data:`globalenv`, :data:`baseenv` and :data:`emptyenv`
  respectively

- The parameter *wantFun* in :meth:`SexpEnvironment.get` is now *wantfun* 

- The call-back getters and setters are now :func:`get_readconsole`,
  :func:`set_readconsole`, :func:`get_writeconsole`, :func:`set_writeconsole`,
  :func:`get_flushconsole`, and :func:`set_flushconsole`.

:mod:`rpy2.rlike`:

- :class:`ArgDict` becomes :class:`OrdDict`.

- :meth:`tags` of :class:`TaggedList` is now a property (with a getter
  and a setter)


Bugs fixed
----------

- :meth:`REnvironment.get` now accepts a named parameter *wantFun*
  (like :meth:`rinterface.SexpEnvironment` does)

- :class:`rinterface.SexpVector` will now properly raise an exception
  when trying to create vector-like object of impossible type


Release 2.0.5
=============

Bugs fixed
----------

- Crash when calling :meth:`SexpEnvironment.get` with an empty string
  #bug report by Walter Moreira

- :meth:`SexpEnvironment.__getitem__` called with an empty string
  caused unpredictable (and bad) things


Release 2.0.4
=============

Bugs fixed
----------

- Added missing named parameter *wantfun* to method :meth:`Renvironment.get`
  (making it similar to :meth:`SexpEnvironment.get`)

- Leak in reference counting when creating SexpVector objects fixed
  (the symptom was a process growing in size when creating R vector from
  Python list or numpy arrays)

- `R CMD config LAPACK_LIBS` could return an empty string when R was compiled