@@ -4,7 +4,7 @@ import testRObject
 import testRVector
 import testRArray
 import testRDataFrame
-import testRFormula
+import testFormula
 import testRFunction
 import testREnvironment
 import testRobjects
@@ -20,7 +20,7 @@ def suite():
     suite_RDataFrame = testRDataFrame.suite()
     suite_RFunction = testRFunction.suite()
     suite_REnvironment = testREnvironment.suite()
-    suite_RFormula = testRFormula.suite()
+    suite_Formula = testFormula.suite()
     suite_Robjects = testRobjects.suite()
     suite_NumpyConversions = testNumpyConversions.suite()
     suite_Methods = testMethods.suite()
@@ -30,7 +30,7 @@ def suite():
                                    suite_RDataFrame,
                                    suite_RFunction,
                                    suite_REnvironment,
-                                   suite_RFormula,
+                                   suite_Formula,
                                    suite_Robjects,
                                    suite_Methods,
                                    suite_NumpyConversions
