@@ -2,19 +2,19 @@ import unittest
 import rpy2.robjects as robjects
 rinterface = robjects.rinterface
 
-class RFormulaTestCase(unittest.TestCase):
+class FormulaTestCase(unittest.TestCase):
 
     def testNew(self):
-        fml = robjects.RFormula("y ~ x")
+        fml = robjects.Formula("y ~ x")
         self.assertEquals("formula", fml.rclass[0])
         
     def testGetenvironment(self):
-        fml = robjects.RFormula("y ~ x")
+        fml = robjects.Formula("y ~ x")
         env = fml.getenvironment()
         self.assertEquals("environment", env.rclass[0])
 
     def testSetenvironment(self):
-        fml = robjects.RFormula("y ~ x")
+        fml = robjects.Formula("y ~ x")
         newenv = robjects.baseenv['new.env']()
         env = fml.getenvironment()
         self.assertFalse(newenv.rsame(env))
@@ -23,7 +23,7 @@ class RFormulaTestCase(unittest.TestCase):
         self.assertTrue(newenv.rsame(env))
 
 def suite():
-    suite = unittest.TestLoader().loadTestsFromTestCase(RFormulaTestCase)
+    suite = unittest.TestLoader().loadTestsFromTestCase(FormulaTestCase)
     return suite
 
 if __name__ == '__main__':
